# bank_widget

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: operations.json
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  widget.py
src/utils/: json_handler.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
