[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "Учебный проект: маскировка номеров карты и счёта"
authors = ["Ваше Имя <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '\.git'

[tool.isort]
profile = "black"
line_length = 119
force_single_line = true

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv|\\.venv|\\.mypy_cache"
mypy_path = "src"